feat: Adicionado endpoint Planejamento
