# src/controllers/index.js
@@ -2,4 +2,5 @@ module.exports = {
     Usuario: require('./usuario/_index'),
     Preferencia: require('./preferencia/_index'),
     Conexao: require('./conexao/_index'),
+    Planejamento: require('./planejamento/_index'),
 };
